# AutoGen

./: .bandit  .gitignore  Makefile  README.md  SETUP_GUIDE.md  cursor_autogen.md  env.example  flake.nix  pyproject.toml  test_all_examples.py  tool_storage.json
examples/advanced/: 01_production_config.py  02_enterprise_system.py  03_monitoring_logging.py
examples/basic/: 01_hello_world.py  02_assistant_agent.py  03_user_proxy.py  04_simple_conversation.py
